--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Cakes Shop Service Website</title>
+  <title>Misty Cakes Shop Service Website</title>
   <link th:rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
   <link th:rel="stylesheet" th:href="@{/css/myStyle.css}">
   <script th:src="@{/js/bootstrap.min.js}"></script>
@@ -12,7 +12,7 @@
   body
   {
     /*            background-image: url('https://wallpaperaccess.com/full/2029165.jpg');*/
-    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://cdn.jewelryimages.net/static/domains/jewelerstouch/images/store-pics/Vintage-Gold-Diamond-Engagement-Ring-Isolated-on-Black-Background.png');
+    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://i.pinimg.com/564x/f9/f8/e5/f9f8e535d4db78ac164eda397d9e808f.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
