Update Project HTML File 19/10/65 14:52

--- a/src/main/resources/templates/address.html
+++ b/src/main/resources/templates/address.html
@@ -117,7 +117,7 @@
   body
   {
     /*            background-image: url('https://wallpaperaccess.com/full/2029165.jpg');*/
-    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://i.pinimg.com/564x/f9/f8/e5/f9f8e535d4db78ac164eda397d9e808f.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://t4.ftcdn.net/jpg/02/22/17/97/360_F_222179720_h4HaoaN4ZSASTZ63GEZFLTzVnj9aElCl.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
