--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,7 +12,7 @@
     body
     {
         /*            background-image: url('https://wallpaperaccess.com/full/2029165.jpg');*/
-        background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://i.pinimg.com/564x/f9/f8/e5/f9f8e535d4db78ac164eda397d9e808f.jpg');
+        background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://t4.ftcdn.net/jpg/02/22/17/97/360_F_222179720_h4HaoaN4ZSASTZ63GEZFLTzVnj9aElCl.jpg');
         background-position: center center;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -23,7 +23,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="header">
 
     <div class="container-fluid">
-        <img src="https://i.ibb.co/6sMH2M0/800px-Ring-logo-svg-1-1.png" style="padding-left:10px;" alt="">
+        <img src="https://i.ibb.co/7CmxMvR/pancakeswap-cake-logo-1.png" style="padding-left:10px;" alt="">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
