--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
 <style>
     body{
         /*            background-image: url('https://wallpaperaccess.com/full/2029165.jpg');*/
-        background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://i.pinimg.com/564x/f9/f8/e5/f9f8e535d4db78ac164eda397d9e808f.jpg');
+        background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://t4.ftcdn.net/jpg/02/22/17/97/360_F_222179720_h4HaoaN4ZSASTZ63GEZFLTzVnj9aElCl.jpg');
         background-position: center center;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col-lg-1"></div>
         <div class="col-lg-10" style="padding-top: 22%;align-items:center;">
-            <h1 style="text-align:center; color: white;font-size: 80px;">Title <br>Title
+            <h1 style="text-align:center; color: white;font-size: 80px;">WELCOME TO <br>MISTY CAKE SHOP
             </h1>
         </div>
         <div class="col-lg-1"></div>
