--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
   body
   {
     /*            background-image: url('https://wallpaperaccess.com/full/2029165.jpg');*/
-    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://i.pinimg.com/564x/f9/f8/e5/f9f8e535d4db78ac164eda397d9e808f.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://t4.ftcdn.net/jpg/02/22/17/97/360_F_222179720_h4HaoaN4ZSASTZ63GEZFLTzVnj9aElCl.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -43,19 +43,21 @@
           <form id="login-form" class="form" th:action="@{/login}" method="post">
             <h3 class="text-center text-info">Login</h3>
             <div class="form-group">
-              <label for="username" class="text-info">Username:</label><br>
+              <label for="username" class="text-black">Username:</label><br>
               <input type="text" name="username" id="username" class="form-control">
             </div>
             <div class="form-group">
-              <label for="password" class="text-info">Password:</label><br>
-              <input type="text" name="password" id="password" class="form-control">
+              <label for="password" class="text-black">Password:</label><br>
+              <input type="password" name="password" id="password" class="form-control">
             </div>
             <div class="form-group">
               <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
+            </div>
+            <div class="text-center form-group">
               <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
             </div>
           </form>
-          <div id="register-link" class="text-right">
+          <div id="register-link" class="text-center">
             <a th:href="@{/register}" class="text-info">Register here</a>
           </div>
         </div>
