--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Cakes Shop Service Website</title>
+    <title>Misty Cakes Shop Service Website</title>
     <link th:rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <script th:src="@{/js/myScript.js}"></script>
@@ -37,7 +37,7 @@
     body
     {
         /*            background-image: url('https://wallpaperaccess.com/full/2029165.jpg');*/
-        background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://cdn.jewelryimages.net/static/domains/jewelerstouch/images/store-pics/Vintage-Gold-Diamond-Engagement-Ring-Isolated-on-Black-Background.png');
+        background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('https://t4.ftcdn.net/jpg/02/22/17/97/360_F_222179720_h4HaoaN4ZSASTZ63GEZFLTzVnj9aElCl.jpg');
         background-position: center center;
         background-repeat: no-repeat;
         background-attachment: fixed;
